# pat-base-lib

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  BUILD  MODULE.bazel  test.cc
.trunk/: trunk.yaml
pat/bytes/: BUILD  buffer.cc  buffer.h  buffer_test.cc
pat/io/: BUILD.bazel  io.cc  io.h  limited_reader.cc  limited_reader.h
pat/net/: BUILD  ip.cc  ip.h  ipaddr.cc  ipaddr.h  tcp_conn.cc  tcp_conn.h
pat/runtime/: BUILD  close.cc  close.h  context.cc  context.h  file.cc  file.h  file_fwd.h  getaddrinfo.cc  getaddrinfo.h  io_context.cc  io_context.h  libuv_context.cc  libuv_context.h  libuv_errors.cc  libuv_errors.h  libuv_file.cc  libuv_file.h  open.cc  open.h  promise.cc  promise.h  promise_pimpl.cc  promise_pimpl.h  read.cc  read.h  stream.cc  stream.h  stream_close.cc  stream_close.h  stream_read.cc  stream_read.h  stream_write.cc  stream_write.h  tcp_connect.cc  tcp_connect.h  tcp_socket.cc  tcp_socket.h  tcp_socket_test.cc  write.cc  (+1 more)
