load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "io",
    srcs = [
        "io.cc",
    ],
    hdrs = [
        "io.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@libunifex",
    ],
)

cc_library(
    name = "limited_reader",
    srcs = [
        "limited_reader.cc",
    ],
    hdrs = [
        "limited_reader.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":io",
        "@libunifex",
        "@libuv",
    ],
)
